Correction pb sur maj adresse sur profile

--- a/src/app/modules/commons/users/signup/signupEnd.html
+++ b/src/app/modules/commons/users/signup/signupEnd.html
@@ -32,104 +32,90 @@
                         <!-- Empty row -->
                         <div class="row">&nbsp;</div>
                         
-                        <!-- Gender for Small device -->
-                        <div class="row  hide-on-med-and-up">
-							<div class="input-field col s3">
-                            	<label>{{'civilSection.label.userGender' | translate }} <span class="red-text text-lighten-1">*</span></label>
-							</div>
-                            <div class="input-field col s9 center-align">
-                            	<input name="signup.gender" class="with-gap" type="radio" id="userGenderF" value="gender.female" ng-model="signup.gender" required/>
-                                <label for="userGenderF">{{'civilSection.label.gender.female' | translate }}</label>
-
-                                <input name="signup.gender" class="with-gap" type="radio" id="userGenderM" value="gender.male" ng-model="signup.gender" required/>
-                                <label for="userGenderM">{{'civilSection.label.gender.male' | translate }}</label>
-                            </div>
-                            <span class="small red-text text-lighten-1"
-                                ng-show="userCivilSectionForm.gender.$invalid && !userCivilSectionForm.gender.$pristine" translate="civilSection.userErrors.Gender"></span>
-                       	</div>
-                        
-                        <!-- Empty row -->
-                        <div class="row hide-on-med-and-up">&nbsp;</div>
-                        
-                        <!-- Firstname & Name all size-->
                         <div class="row">
-                            <div class="col m1 hide-on-small-only">&nbsp;</div>
-                            <div class="col s12 m4 input-field">
-                                <label for="userFirstname">{{'civilSection.label.userFirstname' | translate }} <span class="red-text text-lighten-1">*</span></label>
-                                <input ng-model="signup.firstname" id="userFirstname" name="userFirstname" type="text" class="validate" required 
-                                         ng-class="{ 'has-error' : userCivilSectionForm.userFirstname.$invalid && !userCivilSectionForm.userFirstname.$pristine }">
-                                <span class="small red-text text-lighten-1" ng-show="userCivilSectionForm.userFirstname.$invalid && !userCivilSectionForm.userFirstname.$pristine" 
-                                      translate="civilSection.userErrors.Firstname"></span>
-                            </div>
-                            
-                            <div class="col m2 hide-on-small-only">&nbsp;</div>
-                            
-                            <div class="col s12 m4 input-field">
-                                <label for="userName">{{'civilSection.label.userName' | translate }} <span class="red-text text-lighten-1">*</span></label>
-                                <input ng-model="signup.name" id="userName" name="userName" type="text" class="validate" required 
-                                         ng-class="{ 'has-error' : userCivilSectionForm.userName.$invalid && !userCivilSectionForm.userName.$pristine }">
-                                <span class="small red-text text-lighten-1" ng-show="userCivilSectionForm.userName.$invalid && !userCivilSectionForm.userName.$pristine" 
-                                      translate="civilSection.userErrors.Name"></span>
-                            </div>
-                            <div class="col m1 hide-on-small-only">&nbsp;</div>
-                        </div>
-                        
-                        <!-- Gender & Nationality on Med and Up -->
-                        <div class="row hide-on-small-only">
-                            <div class="col m1 hide-on-small-only">&nbsp;</div>
-                            <div class="col s12 m4 input-field">
-                                    <div class="col s2">
-                                        <label>{{'civilSection.label.userGender' | translate }} <span class="red-text text-lighten-1">*</span></label>
-                                    </div>
-                                    <div class="col s10 center-align">
-                                        <input name="signup.gender" class="with-gap" type="radio" id="userGenderF" value="gender.female" ng-model="signup.gender" required/>
-                                        <label for="userGenderF">{{'civilSection.label.gender.female' | translate }}</label>
-
-                                        <input name="signup.gender" class="with-gap" type="radio" id="userGenderM" value="gender.male" ng-model="signup.gender" required/>
-                                        <label for="userGenderM">{{'civilSection.label.gender.male' | translate }}</label>
-                                    </div>
-                                    <span class="small red-text text-lighten-1"
-                                        ng-show="userCivilSectionForm.gender.$invalid && !userCivilSectionForm.gender.$pristine" translate="civilSection.userErrors.Gender"></span>
-                            </div>
-                            <div class="col m2 hide-on-small-only">&nbsp;</div>
-                            <div class="col m4 s12 input-field">
-                                <label for="userAddres">{{'civilSection.label.userAddress' | translate }}</label>    
-                                <input type="text" id="userAddress" class="form-control validate" ng-autocomplete ng-model="temp.address" details="temp.detailsAddress" options="optionsAddress" placeholder=""/>
-                            </div>
-                            <div class="col m1 hide-on-small-only">&nbsp;</div>
-                        </div>
-                        
-                        <!-- BirthDate & Phone Home all size -->
-                        <div class="row">
-                            <div class="col m1 hide-on-small-only">&nbsp;</div>
-                            <div class="col s12 m4 input-field">
-                                <label for="signupBirthdate">{{'civilSection.label.userBirthDate' | translate }} <span class="red-text text-lighten-1">*</span></label>        
-                                <input id="signupBirthdate" class="datepicker" name="signupBirthdate" type="text" ng-model="signup.birthdateInput" required
-                                        ng-class="{ 'has-error' : userCivilSectionForm.signupBirthdate.$invalid && !userCivilSectionForm.signupBirthdate.$pristine }"/>
-                                <span class="small red-text text-lighten-1"
-                                    ng-show="userCivilSectionForm.signupBirthdate.$invalid && !userCivilSectionForm.signupBirthdate.$pristine" translate="civilSection.userErrors.BirthDate">
-                                </span>
-                            </div>
-                            
-                            <div class="col m2 hide-on-small-only">&nbsp;</div>
-                            
-                            <!-- Nationality for small -->
-                        	<div class="col s12 input-field hide-on-med-and-up">
-                                <label for="userAddres">{{'civilSection.label.userAddress' | translate }}</label>    
-                                <input type="text" id="userAddress" class="form-control validate" ng-autocomplete ng-model="temp.address" details="temp.detailsAddress" options="optionsAddress" placeholder=""/>
-                            </div>
-                            
-                            <div class="col s12 m4 input-field">
-                                <i class="material-icons prefix">phone</i>
-                                <label for="userPhoneHome"><span class="red-text text-lighten-1">*</span></label>
-                                <input id="userPhoneHome" name="userPhoneHome" type="text" ui-mask="{{'commons.format.phone.pattern' | translate }}" class="validate" min="0" ng-model="signup.contact.home" required
-                                       ng-class="{ 'has-error' : userCivilSectionForm.userPhoneHome.$invalid && !userCivilSectionForm.userPhoneHome.$pristine }" />
-                                <span class="small red-text text-lighten-1"
-                                    ng-show="userCivilSectionForm.userPhoneHome.$invalid && !userCivilSectionForm.userPhoneHome.$pristine" translate="civilSection.userErrors.phoneNumberMandatory">
-                                </span>
-                            </div>
-
-                            <div class="col m1 hide-on-small-only">&nbsp;</div>
+                        	<div class="col m1 hide-on-small-only">&nbsp;</div>
+                        	<!-- Column left -->
+                        	<div class="col s12 m4">
+                        		<!-- Gender -->
+		                        <div class="row" id="rowGender">
+									<div class="input-field col s3">
+		                            	<label>{{'civilSection.label.userGender' | translate }} <span class="red-text text-lighten-1">*</span></label>
+									</div>
+		                            <div class="input-field col s9 center-align">
+		                            	<input name="signup.gender" class="with-gap" type="radio" id="userGenderF" value="gender.female" ng-model="signup.gender" required/>
+		                                <label for="userGenderF">{{'civilSection.label.gender.female' | translate }}</label>
+		
+		                                <input name="signup.gender" class="with-gap" type="radio" id="userGenderM" value="gender.male" ng-model="signup.gender" required/>
+		                                <label for="userGenderM">{{'civilSection.label.gender.male' | translate }}</label>
+		                            </div>
+		                            <span class="small red-text text-lighten-1"
+		                                ng-show="userCivilSectionForm.gender.$invalid && !userCivilSectionForm.gender.$pristine" translate="civilSection.userErrors.Gender"></span>
+		                       	</div>
+		                       	
+		                       	<!-- Firstname -->
+		                       	<div class="row">
+		                       		<div class="col s12 input-field">
+		                                <label for="userFirstname">{{'civilSection.label.userFirstname' | translate }} <span class="red-text text-lighten-1">*</span></label>
+		                                <input ng-model="signup.firstname" id="userFirstname" name="userFirstname" type="text" class="validate" required 
+		                                         ng-class="{ 'has-error' : userCivilSectionForm.userFirstname.$invalid && !userCivilSectionForm.userFirstname.$pristine }">
+		                                <span class="small red-text text-lighten-1" ng-show="userCivilSectionForm.userFirstname.$invalid && !userCivilSectionForm.userFirstname.$pristine" 
+		                                      translate="civilSection.userErrors.Firstname"></span>
+		                            </div>
+		                       	</div>
+		                       	
+		                       	<!-- Name -->
+		                       	<div class="row">
+		                       		<div class="col s12 input-field">
+		                                <label for="userName">{{'civilSection.label.userName' | translate }} <span class="red-text text-lighten-1">*</span></label>
+		                                <input ng-model="signup.name" id="userName" name="userName" type="text" class="validate" required 
+		                                         ng-class="{ 'has-error' : userCivilSectionForm.userName.$invalid && !userCivilSectionForm.userName.$pristine }">
+		                                <span class="small red-text text-lighten-1" ng-show="userCivilSectionForm.userName.$invalid && !userCivilSectionForm.userName.$pristine" 
+		                                      translate="civilSection.userErrors.Name"></span>
+		                            </div>
+		                       	</div>
+                        	</div>
+                        	
+                        	<!-- Separator -->
+                        	<div class="col m2 hide-on-small-only">&nbsp;</div>
+                        	
+                        	<!-- Column right -->
+                        	<div class="col s12 m4">
+                        		<!-- Birthdate -->
+                        		<div class="row" id="rowBirthdate">
+                        			<div class="col s12 input-field">
+		                                <label for="signupBirthdate">{{'civilSection.label.userBirthDate' | translate }} <span class="red-text text-lighten-1">*</span></label>        
+		                                <input id="signupBirthdate" class="datepicker" name="signupBirthdate" type="text" ng-model="signup.birthdateInput" required
+		                                        ng-class="{ 'has-error' : userCivilSectionForm.signupBirthdate.$invalid && !userCivilSectionForm.signupBirthdate.$pristine }"/>
+		                                <span class="small red-text text-lighten-1"
+		                                    ng-show="userCivilSectionForm.signupBirthdate.$invalid && !userCivilSectionForm.signupBirthdate.$pristine" translate="civilSection.userErrors.BirthDate">
+		                                </span>
+		                            </div>
+                        		</div>
+                        		
+                        		<!-- Address -->
+                        		<div class="row">
+                        			<div class="col s12 input-field">
+		                                <label for="userAddress">{{'civilSection.label.userAddress' | translate }}</label>    
+		                                <input type="text" id="userAddress" class="form-control validate" ng-autocomplete ng-model="temp.address" details="temp.detailsAddress" options="optionsAddress" placeholder=""/>
+		                            </div>
+                        		</div>
+                        		
+                        		<!-- Phonenumber -->
+                        		<div class="row">
+	                        		<div class="col s12 input-field">
+		                                <i class="material-icons prefix">phone</i>
+		                                <label for="userPhoneHome"><span class="red-text text-lighten-1">*</span></label>
+		                                <input id="userPhoneHome" name="userPhoneHome" type="text" ui-mask="{{'commons.format.phone.pattern' | translate }}" class="validate" min="0" ng-model="signup.contact.home" required
+		                                       ng-class="{ 'has-error' : userCivilSectionForm.userPhoneHome.$invalid && !userCivilSectionForm.userPhoneHome.$pristine }" />
+		                                <span class="small red-text text-lighten-1"
+		                                    ng-show="userCivilSectionForm.userPhoneHome.$invalid && !userCivilSectionForm.userPhoneHome.$pristine" translate="civilSection.userErrors.phoneNumberMandatory">
+		                                </span>
+		                            </div>
+                        		</div>
+                        		
+                        	</div>
+                        	
+                        	<div class="col m1 hide-on-small-only">&nbsp;</div>
                         </div>
                         
                         <!-- actions buttons -->
@@ -141,6 +127,10 @@
                             </div>
                             <div class="col m3 hide-on-med-and-down">&nbsp;</div>
                         </div>
+                        
+                         <script type="text/javascript">
+		                	document.getElementById('rowGender').style.height=$("#rowBirthdate").height() + "px";
+		                </script>
                     </form>
                 </div>
             </wz-step>
