--- a/src/app/modules/public/pricing.html
+++ b/src/app/modules/public/pricing.html
@@ -5,9 +5,9 @@
     <h5 class="center-align" translate="pricing.desc"></h5>
     <div class="row">
         <div class="col s12 m3 offset-m3">
-            <div class="card z-depth-0 blue darken-1 white-text">
+            <div class="card z-depth-0 blue lighten-1 white-text">
                 <div class="card-content center-align">
-                    <div class="card-title blue darken-3 white-text"><b translate="pricing.offers.standard.title"></b>
+                    <div class="card-title blue darken-1 white-text"><b translate="pricing.offers.standard.title"></b>
                     </div>
                     <div class="price center-align white-text">
                         <h4>
@@ -21,9 +21,9 @@
                     </div>
                 </div>
             </div>
-            <h5 class="blue-text text-darken-3" translate="pricing.offers.standard.detail.title"></h5>
-            <h6 class="blue-text text-darken-3" translate="pricing.offers.standard.detail.sub-title"></h6>
-            <div class="divider blue darken-3"></div>
+            <h5 class="blue-text text-darken-1" translate="pricing.offers.standard.detail.title"></h5>
+            <h6 class="blue-text text-darken-1" translate="pricing.offers.standard.detail.sub-title"></h6>
+            <div class="divider blue darken-1"></div>
             <ul class="left-align">
                 <li translate="pricing.offers.standard.detail.line1"></li>
                 <li translate="pricing.offers.standard.detail.line2"></li>
@@ -35,9 +35,9 @@
         </div>
 
         <div class="col s12 m3">
-            <div class="card z-depth-0 light-green white-text">
+            <div class="card z-depth-0 colorSecondary white-text">
                 <div class="card-content center-align">
-                    <div class="card-title light-green darken-2 white-text"><b
+                    <div class="card-title colorMain white-text"><b
                             translate="pricing.offers.team.title"></b></div>
                     <div class="price center-align white-text">
                         <h4>
@@ -51,9 +51,9 @@
                     </div>
                 </div>
             </div>
-            <h5 class="light-green-text text-darken-2" translate="pricing.offers.team.detail.title"></h5>
-            <h6 class="light-green-text text-darken-2" translate="pricing.offers.team.detail.sub-title"></h6>
-            <div class="divider light-green darken-2"></div>
+            <h5 class="light-green-text text-darken-1" translate="pricing.offers.team.detail.title"></h5>
+            <h6 class="light-green-text text-darken-1" translate="pricing.offers.team.detail.sub-title"></h6>
+            <div class="divider light-green darken-1"></div>
             <ul class="left-align">
                 <li translate="pricing.offers.team.detail.line1"></li>
                 <li translate="pricing.offers.team.detail.line2"></li>
@@ -65,7 +65,7 @@
     </div>
     <p class="center-align" translate="pricing.team-subscribe"></p>
 </div>
-<div class="pricing colorMain white-text">
+<div class="pricing colorAccent white-text">
     <div class="container center-align">
         <div class="row valign-middle">
             <div class="col m6 s12 left-align">
