--- a/src/app/components/directives/commons/filter/calendar.html
+++ b/src/app/components/directives/commons/filter/calendar.html
@@ -24,7 +24,7 @@
         </a>
     </div>
     <div class="col s4 center" ng-if="periodicity=='month'">
-        <h6 class="blue-grey-text text-lighten-1">{{periodicityActive.label}}</h6>
+        <h6 class="blue-grey-text text-darken-2">{{periodicityActive.label}}</h6>
     </div>
     <div class="col s1 center" ng-if="periodicity=='month'">
         <a href="" ng-click="nextMonth()" class="btn-floating colorMain white-text right">
@@ -41,7 +41,7 @@
         </a>
     </div>
     <div class="col s4 center" ng-if="periodicity=='quarter'">
-        <h6 class="blue-grey-text text-lighten-1">{{periodicityActive.label}}</h6>
+        <h6 class="blue-grey-text text-darken-2">{{periodicityActive.label}}</h6>
     </div>
     <div class="col s1 center" ng-if="periodicity=='quarter'">
         <a href="" ng-click="nextQuarter()" class="btn-floating colorMain white-text right">
@@ -58,7 +58,7 @@
         </a>
     </div>
     <div class="col s4 center" ng-if="periodicity=='season'">
-        <h6 class="blue-grey-text text-lighten-1">{{periodicityActive.label}}</h6>
+        <h6 class="blue-grey-text text-darken-2">{{periodicityActive.label}}</h6>
     </div>
     <div class="col s1 center" ng-if="periodicity=='season'">
         <a href="" ng-click="nextSeason()" class="btn-floating colorMain white-text right">
@@ -97,7 +97,7 @@
             </a>
         </div>
         <div class="col s8 center">
-            <h6 class="blue-grey-text text-lighten-1">{{periodicityActive.label}}</h6>
+            <h6 class="blue-grey-text text-darken-2">{{periodicityActive.label}}</h6>
         </div>
         <div class="col s1 center" ng-if="periodicity=='month'">
             <a href="" ng-click="nextMonth()" class="btn-floating colorMain white-text right">
@@ -116,7 +116,7 @@
             </a>
         </div>
         <div class="col s8 center">
-            <h6 class="blue-grey-text text-lighten-1">{{periodicityActive.label}}</h6>
+            <h6 class="blue-grey-text text-darken-2">{{periodicityActive.label}}</h6>
         </div>
         <div class="col s1 center" ng-if="periodicity=='quarter'">
             <a href="" ng-click="nextQuarter()" class="btn-floating colorMain white-text right">
@@ -135,7 +135,7 @@
             </a>
         </div>
         <div class="col s8 center" ng-if="periodicity=='season'">
-            <h6 class="blue-grey-text text-lighten-1">{{periodicityActive.label}}</h6>
+            <h6 class="blue-grey-text text-darken-2">{{periodicityActive.label}}</h6>
         </div>
         <div class="col s1 center" ng-if="periodicity=='season'">
             <a href="" ng-click="nextSeason()" class="btn-floating colorMain white-text right">
