--- a/src/app/components/directives/widgets/podium/podium.html
+++ b/src/app/components/directives/widgets/podium/podium.html
@@ -1,5 +1,5 @@
 <!-- cup, championship, friendly game -->
-<div class="card-content">
+<div style="padding-top:20px;">
         <div class="row center-align">
             <div class="col s4" style="background-image:url(/assets/images/trophy1.png); 
                                        background-repeat:no-repeat; 
