--- a/src/app/modules/sandbox/agenda/mainAgenda.html
+++ b/src/app/modules/sandbox/agenda/mainAgenda.html
@@ -96,7 +96,7 @@
         <!-- filter -->
         <form class="forms forms-inline input-field">
             <input type="text" id="query" class="grey lighten-4" ng-model="query">
-            <label for="query">Filter</label>
+            <label for="query">{{'commons.buttons.filter' | translate }}</label>
         </form>
     </div>
 
