#122428132207702 : [Christophe11 Kervella] Les flêches de changement de période ne s'affichent plus

--- a/src/app/components/directives/commons/filter/calendar.html
+++ b/src/app/components/directives/commons/filter/calendar.html
@@ -20,7 +20,7 @@
     <div class="col s1 center" ng-if="periodicity=='month'">&nbsp;</div>
     <div class="col s1 center" ng-if="periodicity=='month'">
         <a href="" ng-click="previousMonth()" class="btn-floating colorMain white-text left">
-            <i class="mdi-navigation-chevron-left"></i>
+            <i class="material-icons">chevron_left</i>
         </a>
     </div>
     <div class="col s4 center" ng-if="periodicity=='month'">
@@ -28,7 +28,7 @@
     </div>
     <div class="col s1 center" ng-if="periodicity=='month'">
         <a href="" ng-click="nextMonth()" class="btn-floating colorMain white-text right">
-            <i class="mdi-navigation-chevron-right"></i>
+            <i class="material-icons">chevron_right</i>
         </a>
     </div>
 
@@ -37,7 +37,7 @@
     <div class="col s1 center" ng-if="periodicity=='quarter'">&nbsp;</div>
     <div class="col s1 center" ng-if="periodicity=='quarter'">
         <a href="" ng-click="previousQuarter()" class="btn-floating colorMain white-text left">
-            <i class="mdi-navigation-chevron-left"></i>
+            <i class="material-icons">chevron_left</i>
         </a>
     </div>
     <div class="col s4 center" ng-if="periodicity=='quarter'">
@@ -45,7 +45,7 @@
     </div>
     <div class="col s1 center" ng-if="periodicity=='quarter'">
         <a href="" ng-click="nextQuarter()" class="btn-floating colorMain white-text right">
-            <i class="mdi-navigation-chevron-right"></i>
+            <i class="material-icons">chevron_right</i>
         </a>
     </div>
 
@@ -54,7 +54,7 @@
     <div class="col s1 center" ng-if="periodicity=='season'">&nbsp;</div>
     <div class="col s1 center" ng-if="periodicity=='season'">
         <a href="" ng-click="previousSeason()" class="btn-floating colorMain white-text left">
-            <i class="mdi-navigation-chevron-left"></i>
+            <i class="material-icons">chevron_left</i>
         </a>
     </div>
     <div class="col s4 center" ng-if="periodicity=='season'">
@@ -62,7 +62,7 @@
     </div>
     <div class="col s1 center" ng-if="periodicity=='season'">
         <a href="" ng-click="nextSeason()" class="btn-floating colorMain white-text right">
-            <i class="mdi-navigation-chevron-right"></i>
+            <i class="material-icons">chevron_right</i>
         </a>
     </div>
 
@@ -93,7 +93,7 @@
         <div class="col s1 center">&nbsp;</div>
         <div class="col s1 center" ng-if="periodicity=='month'">
             <a href="" ng-click="previousMonth()" class="btn-floating colorMain white-text left">
-                <i class="mdi-navigation-chevron-left"></i>
+                <i class="material-icons">chevron_left</i>
             </a>
         </div>
         <div class="col s8 center">
@@ -101,7 +101,7 @@
         </div>
         <div class="col s1 center" ng-if="periodicity=='month'">
             <a href="" ng-click="nextMonth()" class="btn-floating colorMain white-text right">
-                <i class="mdi-navigation-chevron-right"></i>
+                <i class="material-icons">chevron_right</i>
             </a>
         </div>
         <div class="col s1 center">&nbsp;</div>
@@ -112,7 +112,7 @@
         <div class="col s1 center">&nbsp;</div>
         <div class="col s1 center" ng-if="periodicity=='quarter'">
             <a href="" ng-click="previousQuarter()" class="btn-floating colorMain white-text left">
-                <i class="mdi-navigation-chevron-left"></i>
+                <i class="material-icons">chevron_left</i>
             </a>
         </div>
         <div class="col s8 center">
@@ -120,7 +120,7 @@
         </div>
         <div class="col s1 center" ng-if="periodicity=='quarter'">
             <a href="" ng-click="nextQuarter()" class="btn-floating colorMain white-text right">
-                <i class="mdi-navigation-chevron-right"></i>
+                <i class="material-icons">chevron_right</i>
             </a>
         </div>
         <div class="col s1 center">&nbsp;</div>
@@ -131,7 +131,7 @@
         <div class="col s1 center">&nbsp;</div>
         <div class="col s1 enter">
             <a href="" ng-click="previousSeason()" class="btn-floating colorMain white-text left">
-                <i class="mdi-navigation-chevron-left"></i>
+                <i class="material-icons">chevron_left</i>
             </a>
         </div>
         <div class="col s8 center" ng-if="periodicity=='season'">
@@ -139,7 +139,7 @@
         </div>
         <div class="col s1 center" ng-if="periodicity=='season'">
             <a href="" ng-click="nextSeason()" class="btn-floating colorMain white-text right">
-                <i class="mdi-navigation-chevron-right"></i>
+                <i class="material-icons">chevron_right</i>
             </a>
         </div>
         <div class="col s1 center">&nbsp;</div>
