--- a/src/app/modules/sandbox/agenda/compare.html
+++ b/src/app/modules/sandbox/agenda/compare.html
@@ -26,9 +26,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col l7 m7 s12 white-text center">
-                    &nbsp;
-                </div>
+                <div class="col l7 m7 s12 white-text center">&nbsp;</div>
                 <div class="col l2 m2 s12 white-text center">
                     <h5>
                         <a href="" class="white-text waves-effect waves-light" ng-click="doTheBack()">
@@ -71,28 +69,36 @@
                 </table>
                 <div class="row">
                     <div class="col s12 m6">
-                        <qaobee-radar-chart title="{{'stats.actionTab.attack' | translate}} {{'stats.actionTab.positive' | translate}}" owners="eventsIds" series="series"
-                                            start-date="periodicityActive.startDate" meta="meta"
-                                            end-date="periodicityActive.endDate"
-                                            indicators="['penaltyObtained', 'exclTmpObtained', 'shift', 'duelWon', 'passDec']"></qaobee-radar-chart>
+                        <qaobee-radar-chart
+                                title="{{'stats.actionTab.attack' | translate}} {{'stats.actionTab.positive' | translate}}"
+                                owners="eventsIds" series="series"
+                                start-date="periodicityActive.startDate" meta="meta"
+                                end-date="periodicityActive.endDate"
+                                indicators="['penaltyObtained', 'exclTmpObtained', 'shift', 'duelWon', 'passDec']"></qaobee-radar-chart>
                     </div>
                     <div class="col s12 m6">
-                        <qaobee-radar-chart title="{{'stats.actionTab.attack' | translate}} {{'stats.actionTab.negative' | translate}}" owners="eventsIds" series="series"
-                                            start-date="periodicityActive.startDate" meta="meta"
-                                            end-date="periodicityActive.endDate"
-                                            indicators="['forceAtt', 'marcher', 'doubleDribble', 'looseball', 'foot', 'zone', 'stopGKAtt']"></qaobee-radar-chart>
+                        <qaobee-radar-chart
+                                title="{{'stats.actionTab.attack' | translate}} {{'stats.actionTab.negative' | translate}}"
+                                owners="eventsIds" series="series"
+                                start-date="periodicityActive.startDate" meta="meta"
+                                end-date="periodicityActive.endDate"
+                                indicators="['forceAtt', 'marcher', 'doubleDribble', 'looseball', 'foot', 'zone', 'stopGKAtt']"></qaobee-radar-chart>
                     </div>
                     <div class="col s12 m6">
-                        <qaobee-radar-chart title="{{'stats.actionTab.defense' | translate}} {{'stats.actionTab.positive' | translate}}" owners="eventsIds" series="series"
-                                            start-date="periodicityActive.startDate" meta="meta"
-                                            end-date="periodicityActive.endDate"
-                                            indicators="['neutralization', 'forceDef', 'contre', 'interceptionOk']"></qaobee-radar-chart>
+                        <qaobee-radar-chart
+                                title="{{'stats.actionTab.defense' | translate}} {{'stats.actionTab.positive' | translate}}"
+                                owners="eventsIds" series="series"
+                                start-date="periodicityActive.startDate" meta="meta"
+                                end-date="periodicityActive.endDate"
+                                indicators="['neutralization', 'forceDef', 'contre', 'interceptionOk']"></qaobee-radar-chart>
                     </div>
                     <div class="col s12 m6">
-                        <qaobee-radar-chart title="{{'stats.actionTab.defense' | translate}} {{'stats.actionTab.negative' | translate}}" owners="eventsIds" series="series"
-                                            start-date="periodicityActive.startDate" meta="meta"
-                                            end-date="periodicityActive.endDate"
-                                            indicators="['penaltyConceded', 'interceptionKo', 'duelLoose', 'badPosition']"></qaobee-radar-chart>
+                        <qaobee-radar-chart
+                                title="{{'stats.actionTab.defense' | translate}} {{'stats.actionTab.negative' | translate}}"
+                                owners="eventsIds" series="series"
+                                start-date="periodicityActive.startDate" meta="meta"
+                                end-date="periodicityActive.endDate"
+                                indicators="['penaltyConceded', 'interceptionKo', 'duelLoose', 'badPosition']"></qaobee-radar-chart>
                     </div>
                 </div>
             </div>
